# dsc190_finalproject

./: README.md  config.py  email_tool.py  pyproject.toml  weather_content.py
terminal_to_inbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
